[package]
name = "pocs"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "level0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poc-framework = "0.2.0"
level0 = { path = "../contracts/level0",  features = ["no-entrypoint"] }

solana-program = "1.11.2"
borsh = "0.9.1"
borsh-derive = "0.9.1"
spl-token = { version = "*", features = ["no-entrypoint"] }

owo-colors = "3.1.0"
solana-logger = "1.11.2"