[package]
name = "poc-framework"
version = "0.2.0"
authors = []
edition = "2018"
repository = "https://github.com/neodyme-labs/solana-poc-framework"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["solana", "smart", "contracts"]
description = "A framework for creating PoC's for Solana Smart Contracts in a painless and intuitive way"

[dependencies]
itertools = "0.10.1"
bincode = "1.3.3"
rand = "0.7.3"
borsh = "0.9.1"
solana-sdk = { path = "../solana-1.11.2/sdk" }
solana-program = { path = "../solana-1.11.2/sdk/program" }
solana-logger = { path = "../solana-1.11.2/logger" }
solana-runtime = { path = "../solana-1.11.2/runtime" }
solana-transaction-status = { path = "../solana-1.11.2/transaction-status" }
solana-cli-output = { path = "../solana-1.11.2/cli-output" }
solana-bpf-loader-program = { path = "../solana-1.11.2/programs/bpf_loader" }
solana-compute-budget-program = { path = "../solana-1.11.2/programs/compute-budget" }
solana-vote-program = { path = "../solana-1.11.2/programs/vote" }
solana-stake-program = { path = "../solana-1.11.2/programs/stake" }
solana-config-program = { path = "../solana-1.11.2/programs/config" }
solana-client = { path = "../solana-1.11.2/client" }
solana-faucet = { path = "../solana-1.11.2/faucet" }
spl-token =  { path = "../spl-token-3.3.0" }
spl-memo = { path = "../spl-memo-3.0.1" }
spl-associated-token-account = { path = "../spl-associated-token-account-1.0.5" }
serde = "1.0.125"
sha2 = "0.10.2"
libsecp256k1 = "0.7.1"
sha3 = "0.10.0"
hex = "0.4.3"
once_cell = "1.9.0"

[dev-dependencies]
solana-program-runtime = { path = "../solana-1.11.2/programs/program-runtime" }